# gmail-to-sqlite

./: README.md  pyproject.toml
gmail_to_sqlite/: analytics.py  attachments.py  cache.py  config.py  exporters.py  search.py
gmail_to_sqlite/plugins/: __init__.py
templates/config/: default.yaml
templates/plugins/: example_plugin.py
