[project]
name = "gmail-to-sqlite-advanced"
version = "2.0.0"
description = "Advanced Gmail to SQLite synchronization tool with comprehensive analytics, plugin system, and multi-format export capabilities."
readme = "README.md"
requires-python = ">=3.8.1"
license = { file = "LICENSE" }
keywords = ["gmail", "sqlite", "email", "sync", "backup", "archive", "analytics", "export"]

dependencies = [
    "beautifulsoup4>=4.12.0",
    "google-api-python-client>=2.100.0", 
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "peewee>=3.15.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0", 
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]

# Advanced features (optional)
analytics = [
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
]

export = [
    "openpyxl>=3.0.0",
    "pandas>=1.5.0",
]

search = [
    "whoosh>=2.7.4",
]

cache = [
    "redis>=4.0.0",
]

attachments = [
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11", 
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "clamd>=1.0.2",
]

web = [
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "flask-login>=0.6.0",
    "gunicorn>=20.0.0",
]

monitoring = [
    "prometheus-client>=0.15.0",
    "psutil>=5.9.0",
]

# All optional dependencies
all = [
    "pandas>=1.5.0",
    "matplotlib>=3.6.0", 
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "openpyxl>=3.0.0",
    "whoosh>=2.7.4",
    "redis>=4.0.0",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "pytesseract>=0.3.10", 
    "Pillow>=9.0.0",
    "clamd>=1.0.2",
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "flask-login>=0.6.0",
    "gunicorn>=20.0.0",
    "prometheus-client>=0.15.0",
    "psutil>=5.9.0",
]

[project.urls]
"Homepage" = "https://github.com/marcboeker/gmail-to-sqlite-advanced"
"Bug Tracker" = "https://github.com/marcboeker/gmail-to-sqlite-advanced/issues"
"Documentation" = "https://github.com/marcboeker/gmail-to-sqlite-advanced#readme"
"Source Code" = "https://github.com/marcboeker/gmail-to-sqlite-advanced"

[project.scripts]
gmail-to-sqlite = "gmail_to_sqlite.main:main"
gmail-to-sqlite-advanced = "gmail_to_sqlite.cli:advanced_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gmail_to_sqlite"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ignore missing imports for optional dependencies
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "matplotlib.*", 
    "seaborn.*",
    "plotly.*",
    "openpyxl.*",
    "whoosh.*",
    "redis.*",
    "PyPDF2.*",
    "docx.*",
    "pytesseract.*",
    "PIL.*",
    "clamd.*",
    "flask.*",
    "prometheus_client.*",
    "psutil.*",
    "magic.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--disable-warnings", "-v"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance tests"
]

[tool.coverage.run]
source = ["gmail_to_sqlite"]
omit = ["tests/*", "venv/*", ".venv/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError", 
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]